--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.0.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "nodemailer": "^7.0.3",
     "react": "^19",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19",
@@ -61,6 +63,7 @@
   },
   "devDependencies": {
     "@types/node": "^22",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
